package com.carservice.CarService.warehouse;

public class Warehouse {
}
